--- a/netlify.toml
+++ b/netlify.toml
@@ -15,7 +15,7 @@
   command = "hugo --gc --minify --buildFuture -b $DEPLOY_PRIME_URL"
 
 [context.branch-deploy]
-  command = "hugo --gc --minify -b $DEPLOY_PRIME_URL"
+  command = "hugo --gc"
 
 [[headers]]
   for = "/*"
