--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 [build]
   publish = "public"
-  command = "hugo --gc --minify"
+  command = "hugo --gc"
 
 [build.environment]
   HUGO_VERSION = "0.152.2"
@@ -15,7 +15,8 @@
   command = "hugo --gc --minify --buildFuture -b $DEPLOY_PRIME_URL"
 
 [context.branch-deploy]
-  command = "hugo --gc"
+  command = "hugo --gc --minify -b $DEPLOY_PRIME_URL"
+  
 
 [[headers]]
   for = "/*"
