add images to ai-agent-vs-chatbot

--- a/hugo.yaml
+++ b/hugo.yaml
@@ -3,12 +3,13 @@ languageCode: it-it
 title: 'Lab1612'
 theme: PaperMod
 
+
 params:
   label:
     text: "Lab1612"
     icon: /images/logo-lab1612.svg
     iconHeight: 60
-  
+
   description: 'Blog su stampa 3D, programmazione, intelligenza artificiale e tecnologia'
   author: 'Christian'
   
@@ -21,7 +22,7 @@ params:
   homeInfoParams:
     Title: "Ciao! 👋"
     Content: >
-      Benvenuto su SediciDodici - il mio angolo di web dove scrivo di 
+      Benvenuto su 1612.it - il mio angolo di web dove scrivo di 
       **stampa 3D**, **programmazione**, **AI** e tecnologia in generale.
 
   socialIcons:
