--- a/hugo.yaml
+++ b/hugo.yaml
@@ -1,17 +1,23 @@
 baseURL: '/'
 languageCode: it-it
-title: 'Lab1612'
+title: 'LAB1612'
 theme: PaperMod
 
 
 params:
-  label:
-    text: "Lab1612"
-    icon: /images/logo-lab1612.svg
-    iconHeight: 60
-
+  # label:
+  #   text: "Lab1612"
+  #   # icon: /images/logo-lab1612-leo.svg
+  #   icon: /images/logo_lab1612_leo.jpg
+  #   iconHeight: 60
+  profileMode:
+    imageUrl: "/images/logo_lab1612_leo.jpg"
+    
   description: 'Blog su stampa 3D, programmazione, intelligenza artificiale e tecnologia'
   author: 'Christian'
+  
+  # Colori tema coordinati con il logo
+  defaultTheme: dark  # Forza tema scuro come il logo
   
   ShowSearchPage: true
   ShowReadingTime: true
